# structural_optimization

./: pyproject.toml  stopt_2025.py
